Fixing more issues from sonar using sonarlint feedback.